--- a/pkg/native/CMakeLists.txt
+++ b/pkg/native/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.31)
 
 project(native)
 
+if(NOT DEFINED VCPKG_TRIPLET)
+  message(FATAL_ERROR "VCPKG_TRIPLET is required.")
+endif()
 if(NOT DEFINED NODE_RUNTIME_NAME)
   message(FATAL_ERROR "NODE_RUNTIME_NAME is required.")
 endif()
@@ -10,6 +13,7 @@ if(NOT DEFINED NODE_RUNTIME_VERSION)
 endif()
 
 message(STATUS "----------------------------------------")
+message(STATUS "VCPKG_TRIPLET:        ${VCPKG_TRIPLET}")
 message(STATUS "NODE_RUNTIME_NAME:    ${NODE_RUNTIME_NAME}")
 message(STATUS "NODE_RUNTIME_VERSION: ${NODE_RUNTIME_VERSION}")
 message(STATUS "----------------------------------------")
@@ -72,6 +76,11 @@ if(WIN32)
 
   target_link_libraries(${PROJECT_NAME} PRIVATE
     ${CMAKE_SOURCE_DIR}/../../cache/${NODE_RUNTIME_NAME}-${NODE_RUNTIME_VERSION}/win-x64/node.lib
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/archive.lib
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/charset.lib
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/iconv.lib
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/lzma.lib
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/zlib.lib
   )
   target_link_libraries(${PROJECT_NAME} PRIVATE
     kernel32.lib
@@ -116,5 +125,10 @@ if(APPLE)
   target_link_libraries(${PROJECT_NAME} PRIVATE
     "-framework Foundation"
     "-framework AppKit"
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/libarchive.a
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/libcharset.a
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/libiconv.a
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/liblzma.a
+    ${CMAKE_SOURCE_DIR}/../lib/vcpkg_installed/${VCPKG_TRIPLET}/lib/libz.a
   )
 endif()
