--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 	"private": true,
 	"main": "app/browser.cjs",
 	"workspaces": [
+		"pkg/lib",
 		"pkg/native",
 		"pkg/util"
 	],
 	"devDependencies": {
+		"@eyna/lib": "workspace:*",
 		"@eyna/native": "workspace:*",
 		"@eyna/util": "workspace:*",
 		"@vue/runtime-dom": "3.5.24",
