--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,12 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
         with:
-          node-version: 24
-          architecture: ${{ matrix.arch }}
+          node-version: "24"
+      - uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ matrix.arch }}-cache
+          path: |
+            cache
       - run: |
           npm ci --omit=optional
       - run: |
