--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -9,8 +9,11 @@
 		"module": "Preserve",
 		"moduleResolution": "Bundler",
 
-		"baseUrl": "./",
-		"paths": {},
+		"paths": {
+			"@/*": [
+				"./src/*",
+			],
+		},
 
 		// Type Checking
 		"alwaysStrict": true,
