--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
 		"module": "Preserve",
 		"moduleResolution": "Bundler",
 
-		"baseUrl": "./",
 		"paths": {
 			"@/*": [
-				"src/*",
+				"./src/*",
 			],
 		},
 
