--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-# https://github.com/actions/checkout
-# https://github.com/actions/setup-node
-# https://github.com/actions/cache
-# https://github.com/softprops/action-gh-release
 jobs:
   release:
     runs-on: ${{ matrix.os }}
@@ -38,7 +34,7 @@ jobs:
           npm run p
       - uses: softprops/action-gh-release@v2
         with:
-          name: ${{ github.sha }}
+          name: draft
           draft: true
           prerelease: true
           files: dist/*.7z
