テストコード更新

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,11 @@ jobs:
           npx tsx pkg/native/scripts/cmake_node.ts
       - run: |
           npx tsx scripts/test.ts
-          npx tsx pkg/native/test/test.ts
-          npx tsx pkg/native/test/zip.ts
+          npx tsx pkg/native/test/test_compare.ts
+          npx tsx pkg/native/test/test_get.ts
+          npx tsx pkg/native/test/test_icon.ts
+          npx tsx pkg/native/test/test_link.ts
+          npx tsx pkg/native/test/test_operation.ts
+          npx tsx pkg/native/test/test_os.ts
+          npx tsx pkg/native/test/test_zip.ts
+          npx tsx pkg/native/test/test_watch.ts
