--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,11 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: "24"
-      - uses: actions/cache@v4
+      - uses: actions/cache@v5
         with:
-          key: ${{ runner.os }}-${{ matrix.arch }}-cache
+          key: ${{ runner.os }}-${{ matrix.arch }}-cache-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.arch }}-cache-
           path: |
             cache
       - run: |
