--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@eyna/native",
 	"private": true,
+	"type": "module",
 	"types": "types/index.d.ts",
 	"devDependencies": {
 		"tsx": "4.21.0"
