--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
 		"monaco-editor": "0.55.1",
 		"pug": "3.0.3",
 		"stylus": "0.64.0",
-		"tar": "7.5.2",
+		"tar": "7.5.3",
 		"tsx": "4.21.0",
 		"typescript": "5.9.3"
 	},
 	"overrides": {
 		"dompurify": "3",
 		"glob": "13",
-		"rimraf": "6"
+		"rimraf": "6",
+		"tar": "7.5.3"
 	},
 	"scripts": {
 		"postinstall": "tsx scripts/postinstall.ts",
