pkg/native/test cts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,13 +34,13 @@ jobs:
           npx tsx pkg/native/scripts/cmake_node.ts
       - run: |
           npx tsx scripts/test.ts
-          npx tsx pkg/native/test/test_compare.ts
-          npx tsx pkg/native/test/test_get.ts
-          npx tsx pkg/native/test/test_icon.ts
-          npx tsx pkg/native/test/test_link.ts
-          npx tsx pkg/native/test/test_operation.ts
-          npx tsx pkg/native/test/test_os.ts
-          npx tsx pkg/native/test/test_arc_tar.ts
-          npx tsx pkg/native/test/test_arc_tgz.ts
-          npx tsx pkg/native/test/test_arc_zip.ts
-          npx tsx pkg/native/test/test_watch.ts
+          npx tsx pkg/native/test/test_compare.cts
+          npx tsx pkg/native/test/test_get.cts
+          npx tsx pkg/native/test/test_icon.cts
+          npx tsx pkg/native/test/test_link.cts
+          npx tsx pkg/native/test/test_operation.cts
+          npx tsx pkg/native/test/test_os.cts
+          npx tsx pkg/native/test/test_arc_tar.cts
+          npx tsx pkg/native/test/test_arc_tgz.cts
+          npx tsx pkg/native/test/test_arc_zip.cts
+          npx tsx pkg/native/test/test_watch.cts
