--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"@eyna/lib": "workspace:*",
 		"@eyna/native": "workspace:*",
 		"@eyna/util": "workspace:*",
-		"@vue/runtime-dom": "3.5.27",
+		"@vue/runtime-dom": "3.5.28",
 		"codemirror": "6.0.2",
-		"electron": "40.1.0",
-		"electron-builder": "26.5.0",
-		"esbuild": "0.27.2",
+		"electron": "40.2.1",
+		"electron-builder": "26.7.0",
+		"esbuild": "0.27.3",
 		"monaco-editor": "0.55.1",
 		"pug": "3.0.3",
 		"stylus": "0.64.0",
@@ -29,8 +29,7 @@
 	"overrides": {
 		"dompurify": "3",
 		"glob": "13",
-		"rimraf": "6",
-		"tar": "7.5.7"
+		"rimraf": "6"
 	},
 	"scripts": {
 		"postinstall": "node scripts/postinstall.mts",
